<resources>
    <string name="app_name">Workout Zone</string>

    //MainTitle
    <string name="MainTitle">Workout Zone</string>

    //QuadExercises
    <string name="JumpSquat">Jump Squat</string>
    <string name="BackSquat">Back Squat</string>
    <string name="FrontSquat">Front Squat</string>
    <string name="DumbbellLunge">Dumbbell Lunge</string>
    <string name="DumbbellBulgarianSplitSquad">Dumbbell Bulgarian Split Squad</string>

    //AbExercises
    <string name="AbCrunchMachine">Ab Crunch Machine</string>
    <string name="CrunchMachine">Crunch Machine</string>
    <string name="AbTwistMachine">Ab Twist Machine</string>
    <string name="LegRaise">Leg Raise</string>
    <string name="RussianTwist">Russian Twist</string>

    //BicepExercises
    <string name="CableBicepCurl">Cable Bicep Curl</string>
    <string name="DumbbellBicepCurl">Dumbbell Bicep Curl</string>
    <string name="HammerCurl">Hammer Curl</string>
    <string name="SeatedDumbbellCurl">Seated Dumbbell Curl</string>
    <string name="PreacherCurl">Preacher Curl</string>

    //ChestExercises
    <string name="CableCrossoverFly">Cable Crossover Fly</string>
    <string name="SingleArmCableCrossover">Single Arm Cable Crossover</string>
    <string name="BarbellBenchPress">Barbell Bench Press</string>
    <string name="DumbbellBenchPress">Dumbbell Bench Press</string>
    <string name="DumbbellFly">Dumbbell Fly</string>

    //ShoulderExercises
    <string name="DumbbellShoulderPress">Dumbbell Shoulder Press</string>
    <string name="DumbbellShoulderRaise">Dumbbell Shoulder Raise</string>
    <string name="DumbbellFrontRaise">Dumbbell Front Raise</string>
    <string name="DumbbellRearDeltRaise">Dumbbell Rear Delt Raise</string>
    <string name="CableLateralRaise">Cable Lateral Raise</string>

    //OtherTitles
    <string name="BicepTitle">Bicep</string>
    <string name="TricepTitle">Tricep</string>
    <string name="QuadricepTitle">Quadricep</string>
    <string name="ChestTitle">Chest</string>
    <string name="BackTitle">Back</string>
    <string name="ShoulderTitle">Shoulder</string>
    <string name="AbsTitle">Abs</string>
    <string name="TrapeziusTitle">Trapezius</string>
    <string name="GluteTitle">Glute</string>
    <string name="HamstringTitle">Hamstring</string>
    <string name="ForearmTitle">Forearm</string>
    <string name="LowerBackTitle">Lower Back</string>
    <string name="CalfTitle">Calf</string>

    //ImageHuman
    <string name="ImageHuman">Human</string>

    //BicepButton
    <string name="buttonBicep">Bicep</string>
    //TricepButton
    <string name="buttonTricep">Tricep</string>
    //QuadricepButton
    <string name="buttonQuadricep">Quadricep</string>
    //BackButton
    <string name="buttonBack">Back</string>
    //ChestButton
    <string name="buttonChest">Chest</string>
    //ShoulderButton
    <string name="buttonShoulder">Shoulder</string>
    //MainActivityButton
    <string name="buttonContinue">Continue</string>
    //AbsButton
    <string name="buttonAbs">Abs</string>
    //TrapeziusButton
    <string name="buttonTrapezius">Trapezius</string>
    //HamstringButton
    <string name="buttonHamstring">Hamstring</string>
    //ForearmButton
    <string name="buttonForearm">Forearm</string>
    //LowerBackButton
    <string name="buttonLowerBack">Lower Back</string>
    //CalfButton
    <string name="buttonCalf">Calf</string>
    //GluteButton
    <string name="buttonGlute">Glute</string>

</resources>