<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MuscleSelect">

    <Button
        android:id="@+id/buttonShoulder"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="57dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonShoulder"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonChest"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="85dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonChest"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonBicep"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="113dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonBicep"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonForearm"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="140dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonForearm"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonAbs"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="168dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonAbs"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonQuadricep"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="224dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonQuadricep"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonTrapezius"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginTop="389dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonTrapezius"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonTricep"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginTop="440dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonTricep"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,DuplicateClickableBoundsCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginTop="489dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonBack"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonLowerBack"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginTop="520dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonLowerBack"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonGlute"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginTop="560dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonGlute"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonHamstring"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginTop="600dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonHamstring"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonCalf"
        android:layout_width="126dp"
        android:layout_height="36dp"
        android:layout_marginTop="643dp"
        android:elevation="3dp"
        android:stateListAnimator="@null"
        android:text="@string/buttonCalf"
        android:textSize="11sp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="408dp"
        android:layout_height="758dp"
        android:contentDescription="@string/ImageHuman"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/human"
        tools:ignore="ImageContrastCheck"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

