<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Chest">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ChestTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_marginStart="328dp"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/dfbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dfbutton"
            app:layout_constraintVertical_bias="0.507"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_marginStart="328dp"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/dbpbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dbpbutton"
            app:layout_constraintVertical_bias="0.492" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_marginStart="328dp"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/bbpbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bbpbutton"
            app:layout_constraintVertical_bias="0.447" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_marginStart="328dp"
            android:elevation="3dp"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/saccbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/saccbutton"
            app:layout_constraintVertical_bias="0.582" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_marginStart="328dp"
            android:layout_marginBottom="39dp"
            android:elevation="3dp"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/crfbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/crfbutton"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/crfbutton"
            android:layout_width="270dp"
            android:layout_height="115dp"
            android:layout_marginTop="16dp"
            android:checkable="false"
            android:elevation="1dp"
            android:text="@string/CableCrossoverFly"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/saccbutton"
            android:layout_width="270dp"
            android:layout_height="115dp"
            android:layout_marginTop="12dp"
            android:text="@string/SingleArmCableCrossover"
            android:textAlignment="viewStart"
            android:textSize="13.4sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crfbutton" />

        <Button
            android:id="@+id/bbpbutton"
            android:layout_width="270dp"
            android:layout_height="115dp"
            android:layout_marginTop="8dp"
            android:text="@string/BarbellBenchPress"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saccbutton" />

        <Button
            android:id="@+id/dbpbutton"
            android:layout_width="270dp"
            android:layout_height="115dp"
            android:layout_marginTop="16dp"
            android:text="@string/DumbbellBenchPress"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bbpbutton" />

        <Button
            android:id="@+id/dfbutton"
            android:layout_width="270dp"
            android:layout_height="115dp"
            android:layout_marginTop="8dp"
            android:text="@string/DumbbellFly"
            android:textAlignment="viewStart"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.645"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dbpbutton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
